Bug #20426. Convert SMALLDATETIME correct

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@115709 c90b9560-bf6c-de11-be94-00142212c4b1